--- a/WebContent/css/handheld.css
+++ b/WebContent/css/handheld.css
@@ -1,6 +1,39 @@
 @charset "UTF-8";
 
-#map {
+#messagebox {
 	width: 100%;
 	height: 50%;
+	border-right: none;
+	border-radius: 0px;
+	display: none;
+}
+
+#bubble {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 24px;
+	height: 24px;
+	background-color: #fff;
+	overflow: hidden;
+	z-index: 1;
+	padding: 3px;
+	border-right: 4px outset #fff;
+	border-bottom: 4px outset #fff;
+	border-bottom-right-radius: 17px;
+	display: block;
+}
+
+#back {
+	position: absolute;
+	bottom: 0px;
+	left: 0px;
+	width: 24px;
+	height: 24px;
+	padding: 3px;
+	display: block;
+}
+
+#lettersleftbox {
+	width: calc(100% - 135px);
 }
