--- a/WebContent/css/all.css
+++ b/WebContent/css/all.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+body {
+	font-family: sans-serif;
+	overflow: hidden;
+}
+
 #map {
 	position: absolute;
 	top: 0px;
@@ -8,6 +13,44 @@
 	height: 100%;
 	background-color: #888;
 	z-index: 0;
+}
+
+#overlay {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	display: table;
+	z-index: 999;
+	text-align: center;
+	background-color: rgba(0, 0, 0, .8);
+	color: #fff;
+	font-size: 72pt;
+}
+
+#overlay div {
+	display: table-cell;
+	vertical-align: middle;
+	padding-bottom: 1em;
+}
+
+#overlay div div {
+	display: none;
+}
+
+#overlay div div.nojs {
+	display: block;
+}
+
+#overlay .fa-exclamation-triangle {
+	color: #FFBA00;
+}
+
+#overlay .fa {
+	display: block;
+	font-size: 2em;
+	margin-bottom: .5em;
 }
 
 #bubble {
