--- a/WebContent/css/all.css
+++ b/WebContent/css/all.css
@@ -65,8 +65,8 @@ body {
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	height: 30%;
-	width: 25%;
+	height: 150px;
+	width: 200px;
 	background-color: #fff;
 	overflow: hidden;
 	z-index: 2;
