--- a/WebContent/css/all.css
+++ b/WebContent/css/all.css
@@ -5,6 +5,27 @@ body {
 	overflow: hidden;
 }
 
+#toasts {
+	position: absolute;
+	top: 10px;
+	left: 50%;
+	z-index: 9999;
+	width: 600px;
+}
+
+#toasts .toast {
+	position: relative;
+	left: -50%;
+	margin: 2px;
+	background: #555;
+	color: #fff;
+	padding: 5px;
+	border-radius: 10px;
+	display: none;
+	text-align: center;
+	font-weight: bold;
+}
+
 #map {
 	position: absolute;
 	top: 0px;
