Tastatur Handy Problem css

--- a/WebContent/css/handheld.css
+++ b/WebContent/css/handheld.css
@@ -10,8 +10,8 @@
 
 #messagebox {
 	width: 100%;
-	height: 50%;
-	border-right: none;
+	height: 100%;
+	border: none;
 	border-radius: 0px;
 	display: none;
 }
