--- a/WebContent/css/all.css
+++ b/WebContent/css/all.css
@@ -192,3 +192,21 @@ body {
 	display: none;
 }
 
+.tweetInfo {
+	padding: 2px;
+}
+
+.tweetDateTime {
+	font-size: 8pt;
+	color: #ccc;
+	padding-top: 2px;
+}
+
+.tweetAuthor {
+	display: block;
+	font-size: 10pt;
+	color: #888;
+	text-decoration: none;
+	border-bottom: 1px #ccc solid;
+	padding-bottom: 2px;
+}
